Fix timeline event border on small screen sizes

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -4246,12 +4246,8 @@ for selection in timeline_search.js */
   }
   
   .event-header {
-    padding: 9px 15px 10px 15px;
+    padding: 10px 15px;
     font-size: 14px;
-  }
-
-  .timeline-event {
-    margin-top: -8px;
   }
 
   .epoch-elems {
